commit test intelliJ

--- a/views/index.erb
+++ b/views/index.erb
@@ -27,7 +27,7 @@
 			</div><!-- /header -->
 
 			<ul data-role="listview" data-inset="true" data-theme="b" data-icon="arrow-r" data-dividertheme="f">
-				<li data-role="list-divider"><h1>All myDestinations</h1></li>
+				<li data-role="list-divider"><h1>Ski Destinations</h1></li>
 				<li><a href="/vail" data-transition="slide" data-ajax="false">Vail</a></li>
 				<li><a href="/breckinridge" data-transition="slide" data-ajax="false">Breckenridge</a></li>
                 <li><a href="/keystone" data-transition="slide" data-ajax="false">Keystone</a></li>
