--- a/views/index.erb
+++ b/views/index.erb
@@ -28,7 +28,7 @@
 
 			<ul data-role="listview" data-inset="true" data-theme="b" data-icon="arrow-r" data-dividertheme="f">
 				<li data-role="list-divider"><h1>Ski CO Destinations</h1></li>
-				<li><a href="/vail" data-transition="slide" data-ajax="false">Vail</a></li>
+				<li><a href="/vail" data-transition="slide" data-ajax="false">Vail Ski</a></li>
 				<li><a href="/breckinridge" data-transition="slide" data-ajax="false">Breckenridge</a></li>
                 <li><a href="/keystone" data-transition="slide" data-ajax="false">Keystone</a></li>
 			</ul>
